# minimal-socks5

./: Cargo.toml  Dockerfile  LICENSE  README.md  deny.toml  renovate.json
.github/workflows/: cargo-deny.yaml  rust.yaml
src/: main.rs  message.rs  server.rs
