[package]
name = "minimal-socks5"
version = "0.1.0"
edition = "2021"
license = "ISC"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
atty = "0.2"
clap = {version = "4", features = ["derive", "env"]}
ctrlc = "3"
tokio = {version = "1", features = ["rt", "io-util", "net", "time", "macros", "sync", "parking_lot"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["parking_lot", "env-filter"]}
