[package]
name = "minimal-socks5"
description = "Minimal implementation of a subset of SOCKS5 written for my personal use."
version = "0.1.1"
edition = "2021"
license = "ISC"
readme = "README.md"
repository = "https://github.com/FSMaxB/minimal-socks5"
rust-version = "1.72"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = {version = "4", features = ["derive", "env"]}
ctrlc = "3"
tokio = {version = "1", features = ["rt", "io-util", "net", "time", "macros", "sync", "parking_lot"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["parking_lot", "env-filter"]}
